# Homework

./: README.md  pyproject.toml
homework/: config.py  sample-env
homework/clients/: models.py
homework/components/: database.py
homework/environments/: development.py
homework/goods/: forms.py  models.py  urls.py  views.py
homework/home/: urls.py  views.py
homework/home/templates/home/: about.html  accommodation_details.html  accommodations.html  home.html
homework/home/templates/home/includes/: inc_footer.html
homework/homework/: settings.py  urls.py
homework/orders/: models.py
homework/templates/: base.html
