[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
